--- a/travelblog.html
+++ b/travelblog.html
@@ -18,13 +18,13 @@
             <li><a href="">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#destinations">Destinations</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contactPage.html">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
 
-    <div class="text-container reveal">
+    <div class="text-container">
       <section class="red">
         <div class="group">
           <p class="tourism">
